buildscript {
    ext {
        eventuateTramVersion = '0.34.0.RELEASE'
        eventuateTramSagasVersion = '0.23.0.RELEASE'
//        eventuateCommonVersion = 'LATEST_VERSION'
    }
}

plugins {
    id 'org.springframework.boot' version '3.1.4'
    id 'io.spring.dependency-management' version '1.0.14.RELEASE'
    id 'java'
}

group = 'org.sandro'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.kafka:spring-kafka'
    runtimeOnly 'com.h2database:h2'

    implementation "io.micrometer:micrometer-registry-prometheus"

    implementation 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // eventuate-tram
//    implementation "io.eventuate.common:eventuate-common-json-mapper:$eventuateCommonVersion"
    implementation "io.eventuate.tram.core:eventuate-tram-aggregate-domain-events:$eventuateTramVersion"
    implementation "io.eventuate.tram.core:eventuate-tram-spring-messaging:$eventuateTramVersion"
    implementation "io.eventuate.tram.core:eventuate-tram-spring-commands:$eventuateTramVersion"
//    implementation "io.eventuate.tram.core:eventuate-tram-spring-jdbc-kafka:$eventuateTramVersion"
    implementation "io.eventuate.tram.core:eventuate-tram-spring-producer-jdbc:$eventuateTramVersion"
    implementation "io.eventuate.tram.core:eventuate-tram-spring-consumer-kafka:$eventuateTramVersion"
    implementation "io.eventuate.tram.core:eventuate-tram-spring-events:$eventuateTramVersion"

//    implementation "io.eventuate.tram.sagas:eventuate-tram-sagas-simple-dsl:$eventuateTramSagasVersion"
    implementation "io.eventuate.tram.sagas:eventuate-tram-sagas-orchestration-simple-dsl:$eventuateTramSagasVersion"
    implementation "io.eventuate.tram.sagas:eventuate-tram-sagas-spring-orchestration-simple-dsl-starter:$eventuateTramSagasVersion"
    implementation "io.eventuate.tram.sagas:eventuate-tram-sagas-participant:$eventuateTramSagasVersion"

    //    testImplementation "io.eventuate.util:eventuate-util-test:$eventuateUtilVersion"
    testImplementation "io.eventuate.tram.core:eventuate-tram-test-util:$eventuateTramVersion"
//    testImplementation "io.eventuate.tram.sagas:eventuate-tram-sagas-in-memory:$eventuateTramSagasVersion"
//    testImplementation "io.eventuate.tram.core:eventuate-tram-testing-support-spring-cloud-contract:$eventuateTramVersion"
    testImplementation "io.eventuate.tram.sagas:eventuate-tram-sagas-testing-support:$eventuateTramSagasVersion"

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

test {
    useJUnitPlatform()
}
